--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-ts": "babel src --out-dir dist --extensions \".ts\" --source-maps true && node ./dist/index.js",
     "build": "rm -rf dist && yarn run build-ts",
     "start": "node ./dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
