Revert "feat: quick setup websocket"
This reverts commit 23d7e8d89e4136a1e3befcc4d2802364c7bd8c4f.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noImplicitThis": false,
     "isolatedModules": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist/**/*"]
