--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "express-ws": "^5.0.2"
+    "express": "^4.17.1",
+    "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -28,7 +28,6 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
     "@types/express": "^4.17.13",
-    "@types/express-ws": "^3.0.1",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
